kubernetes_init/tilt/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glados-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend
        ports:
        - containerPort: 5050
